update banner to point to kubecon EU 2024 video
Signed-off-by: Abigail McCarthy <20771501+a-mccarthy@users.noreply.github.com>

--- a/site/themes/carvel/layouts/partials/_banner.html
+++ b/site/themes/carvel/layouts/partials/_banner.html
@@ -1,5 +1,5 @@
 <div class="pageinfo pageinfo--red" style="text-align:center; margin:1px; display:flex; justify-content: center">
   <span style="margin: 0px; padding: 8px; background-color:#fff7b3; width: 100%;">
-    KubeCon + CloudNativeCon is next week! See all the places we'll be <a href="/blog/carvel-kubecon-eu-2024">here</a>.
+    Watch our <a href="https://www.youtube.com/watch?v=1u5LtsJqyrA">latest talk</a> from KubeCon + CloudNativeCon EU 2024!
   </span>
 </div>
